# arthur-cli

./: Justfile  README.md  pyproject.toml
arthur/: __init__.py  __main__.py  cli.py
tests/: test_arthur.py
