[tool.poetry]
name = "arthur-cli"
version = "0.1.0"
description = "Arthur is a CLI to quickly setup common programming projects"
authors = ["Matheus Mello <mellomatheuslima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.13.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
